Fix too small text.

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,8 @@
 body {
+  font-size: xx-large;
+  font-family: "helvetica", sans-serif;
+}
+input {
+  font-size: xx-large;
   font-family: "helvetica", sans-serif;
 }
